
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
    75: AstroFloyd, 12/04/2010
     - Renamed plotplt_new.f to plotplt.f
    
    74: AstroFloyd, 11/04/2010
     - Added old plotplt.f as plotplt_r066.f
     - Added nagfor.f with dummy routines
     
    73: AstroFloyd, 11/04/2010
     - Everything in plot/ compiles with nagfor (warnings off)
    
    72: AstroFloyd, 11/04/2010
     - developing plotplt_new: fixing details
       - added entry in Makefile
       - use both pglabels and asclabels, use the latter for PS file names and title
       - fix strmdl (version doesn't work because of unformatted read)
         - plotting where structure models were stored now works
       - print legenda when using multiple input files
           
    71: AstroFloyd, 11/04/2010
     - developing plotplt_new: replaced f,nf with pl,npl in most places
     - adapted getpltlabels(), printpltvarlist() and pltconvection()
     - most things seem to work
     
    70: AstroFloyd, 11/04/2010
     - developing plotplt_new: added a dimension to variables (e.g. dat(:,:) -> dat(:,:,:))
     - to do: distinguish between multi-variable (ny) and multi-file plots (nf)
    
    69: AstroFloyd, 11/04/2010
     - added plotplt_new.f to create a version of plotplt.f that can read multiple
       files (and will replace plotpltn.f)
    
    68: AstroFloyd, 11/04/2010
     - moved routines to read plt files from functions.f plt_functions.f
    
    67: AstroFloyd, 11/04/2010
     - plotplt.f:
       - remapped variables 82-100 to 116-134
       - moved around variables >200
       - renamed AM H -> J
       - use defvar to determine whether a variable is defined
    
    66: AstroFloyd, 11/04/2010
     - plotplt.f:
       - use proper colours and legenda for multi-variable plots
       - added variable 115: R/Rzams
       - swapped vars 202/203 (now convection and dH/dt plots)