@@ -145,7 +145,7 @@ program plotplt
      call printpltvarlist(nf)  !Print the list of variables in a *.plt? file to screen, for input menu
      
      
-35   write(6,'(A,$)')'  Choose the X-axis variable: '
+35   write(6,'(A)', advance='no')'  Choose the X-axis variable: '
      read*,vx
      if(vx.eq.0) goto 9999
      if(vx.lt.0.or.vx.gt.201) goto 35
@@ -184,7 +184,7 @@ program plotplt
   end if
   
   if(plot.lt.2) then      
-36   write(6,'(A,$)')'  Choose the Y-axis variable: '
+36   write(6,'(A)', advance='no')'  Choose the Y-axis variable: '
      read*,vy
      if(vy.eq.0) goto 9999
      if(vy.lt.0) goto 36
@@ -298,7 +298,7 @@ program plotplt
   !***   LIN/LOG AXES
   !************************************************************************      
   if(plot.ne.6.and.plot.ne.7) then      
-     write(6,'(A,$)')' Do you want a logarithmic scale:  (N)o, (X)-axis, (Y)-axis, (B)oth: '
+     write(6,'(A)', advance='no')' Do you want a logarithmic scale:  (N)o, (X)-axis, (Y)-axis, (B)oth: '
      read*,log
      if(log.eq.'X') log='x'
      if(log.eq.'Y') log='y'
@@ -424,7 +424,7 @@ program plotplt
      write(6,*)''
      write(6,*)' X-range:',xmin,'-',xmax
      write(6,*)' Y-range:',ymin,'-',ymax
-     write(6,'(A,$)')' Do you want to change a plot range ?  (N)o, (X)-axis, (Y)-axis, (B)oth: '
+     write(6,'(A)', advance='no')' Do you want to change a plot range ?  (N)o, (X)-axis, (Y)-axis, (B)oth: '
      read*,rng
      
      if(rng.eq.'N') rng='n'
@@ -435,7 +435,7 @@ program plotplt
      if(rng.eq.'n'.or.rng.eq.' ') goto 100
      
      if(rng.eq.'x'.or.rng.eq.'b') then
-        write(6,'(A51,$)')'  Give the new range for the X-axis (Xmin, Xmax): '
+        write(6,'(A51)', advance='no')'  Give the new range for the X-axis (Xmin, Xmax): '
         read*,xmin,xmax
         if(xmin.gt.xmax) then
            x = xmin
@@ -447,7 +447,7 @@ program plotplt
      
      
      if(rng.eq.'y'.or.rng.eq.'b') then
-        write(6,'(A51,$)')'  Give the new range for the Y-axis (Ymin, Ymax): '
+        write(6,'(A51)', advance='no')'  Give the new range for the Y-axis (Ymin, Ymax): '
         read*,ymin,ymax
         if(ymin.gt.ymax) then
            x = ymin
@@ -510,7 +510,7 @@ program plotplt
   
   !if(conv.eq.1) then
   !   ch = 0
-  !   !write(6,'(A42,$)')' Do you want to plot hatches (Y)es/(N)o: '
+  !   !write(6,'(A42)', advance='no')' Do you want to plot hatches (Y)es/(N)o: '
   !   !read*,cnvh
   !   !if(cnvh.eq.'y'.or.cnvh.eq.'Y') ch = 1
   !end if
@@ -543,7 +543,7 @@ program plotplt
      hp = 0
      hlbl = 'n'
      hlp = 'n'
-     write(6,'(A47,$)')' Do you want to highlight model points (y/n) ? '
+     write(6,'(A47)', advance='no')' Do you want to highlight model points (y/n) ? '
      read*,hlp
      if(hlp.eq.'Y') hlp='y'
      if(hlp.eq.'N') hlp='n'
@@ -551,7 +551,7 @@ program plotplt
      if(hlp.eq.'y') then
         hlp1 = 's'
         if(nf.eq.1) then
-           write(6,'(A,$)')' Do you want show (S)tructure models or type model numbers (M)anually?  (S/M) ? '
+           write(6,'(A)', advance='no')' Do you want show (S)tructure models or type model numbers (M)anually?  (S/M) ? '
            read*,hlp1
            if(hlp1.eq.'S') hlp1='s'
            if(hlp1.eq.'M') hlp1='m'
@@ -601,7 +601,7 @@ program plotplt
         end if
         
         write(6,*)''     
-        write(6,'(A43,$)')' Do you want to label these points (y/n) ? '
+        write(6,'(A43)', advance='no')' Do you want to label these points (y/n) ? '
         read*,hlbl
         if(hlbl.eq.'Y') hlbl='y'
         if(hlbl.eq.'N') hlbl='n'
@@ -759,9 +759,9 @@ program plotplt
      call pgsci(col)
      !if(npl.eq.1) call pgsci(2)
      yy1(1:n(pl)) = yy(pl,1:n(pl))
-     if(drawlines.eq.0) call pgpoint(n,xx(pl,1:n(pl)),yy1(1:n(pl)),1)
-     if(drawlines.ge.1) call pgline(n,xx(pl,1:n(pl)),yy1(1:n(pl)))
-     if(drawlines.eq.2) call pgpoint(n,xx(pl,1:n(pl)),yy1(1:n(pl)),20)
+     if(drawlines.eq.0) call pgpoint(n(pl),xx(pl,1:n(pl)),yy1(1:n(pl)),1)
+     if(drawlines.ge.1) call pgline(n(pl),xx(pl,1:n(pl)),yy1(1:n(pl)))
+     if(drawlines.eq.2) call pgpoint(n(pl),xx(pl,1:n(pl)),yy1(1:n(pl)),20)
   end do
   call pgsci(1)
   
@@ -845,9 +845,9 @@ program plotplt
      call pgsls(4)
      do pl=1,npl
         if(lgy.eq.0) then
-           call pgline(n,xx(pl,1:n(pl)),real(dat(pl,21,1:n(pl))))
+           call pgline(n(pl),xx(pl,1:n(pl)),real(dat(pl,21,1:n(pl))))
         else 
-           call pgline(n,xx(pl,1:n(pl)),log10(real(dat(pl,21,1:n(pl)))))
+           call pgline(n(pl),xx(pl,1:n(pl)),log10(real(dat(pl,21,1:n(pl)))))
         end if
      end do !pl
      call pgsls(1)
@@ -856,7 +856,7 @@ program plotplt
   if(vy.eq.122) then !Comp sat-MB with RVJ83-MB
      call pgsls(4)
      do pl=1,npl
-        call pgline(n,xx(pl,1:n(pl)),log10(real(dat(pl,38,1:n(pl)))))
+        call pgline(n(pl),xx(pl,1:n(pl)),log10(real(dat(pl,38,1:n(pl)))))
      end do !pl
      call pgsls(1)
   end if
@@ -921,7 +921,7 @@ program plotplt
      write(6,'(A)')' 11) toggle drawing line/points'
   end if !if(plot.ne.9) then
   write(6,*)''
-  write(6,'(A27,$)')' What do you want to do ?  '
+  write(6,'(A27)', advance='no')' What do you want to do ?  '
   read*,plot
   if(plot.lt.0.or.plot.gt.11) goto 900
   
@@ -1040,7 +1040,7 @@ program plotplt
         write(6,'(A)')'  1: dots'
         write(6,'(A)')'  2: lines'
         write(6,'(A)')'  3: both'
-        write(6,'(A,$)')'  What would you like to plot?  '
+        write(6,'(A)', advance='no')'  What would you like to plot?  '
         read*,ansi
      end do
      if(ansi.gt.0) drawlines = ansi-1 !0-2
